# flask-template-components

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENCE  README.md  changelog.md  flask_template_components.sublime-workspace  index.rst  pyproject.toml
.github/workflows/: tests.yml
docs/: api.rst  conf.py  index.rst
src/flask_template_components/: __init__.py  core.py  css.py  helpers.py  template_components.py
src/flask_template_components/components/: images.py
src/flask_template_components/templates/template_components/links/: link.html.j2
tests/: conftest.py  test_flask_app.py
tests/components/: test_base_component.py  test_icons.py  test_links.py
tests/helpers/: flask_app.py
