[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flask_template_components"
version = "0.1.0"
authors = [
  { name="Jan Peterka", email="jan.peterka@hey.com" },
]
description = "Flask extension for rendering reusable components."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/janpeterka/flask-template-components"
"Bug Tracker" = "https://github.com/janpeterka/flask-template-components/issues"
